@@ -1,8 +1,10 @@
 suil (9999) unstable;
 
   * Gracefully handle UIs with no port_event method
+  * Replace host provided features that match Suil implemented features, rather
+    than passing UIs duplicate features
 
- -- David Robillard <d@drobilla.net>  Tue, 17 Jul 2012 23:16:19 -0400
+ -- David Robillard <d@drobilla.net>  Thu, 02 Aug 2012 18:08:43 -0400
 
 suil (0.6.4) stable;
 
